# arrakis

./: IMPLEMENTATION-SUMMARY.md  Makefile  NFS-ONLY-MODE.md  NFS-ROOT-QUICKSTART.md  README.md  config.yaml  example_claude_desktop_config.json  go.mod  go.sum  test_arrakis.py  test_arrakis_basic.py  test_arrakis_callback.py  test_callback_rpc.py  test_nfs_integration.sh  test_parallel_rpc.py
cintegrity/: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT.md  NOTICE  README.md  gateway.py  pyproject.toml
cintegrity/docs/: README.md  STYLE_GUIDE.md  VERSA_NETWORKS.md  agent.branch-disconnect.xml
cintegrity/examples/customer_support/: agent.py  tools.py
cintegrity/examples/data_analyst/: agent.py  tools.py
cintegrity/examples/email_assistant/: agent.py  tools.py
cintegrity/examples/missing-param/: agent_direct.py  agent_gateway.py  server.py  tools.py
cintegrity/examples/versa_networks_conductor/: agent.py  gateway.py  log.txt
cintegrity/skill-plugin/: SKILL.md
cintegrity/src/cintegrity/: logger.py
cintegrity/src/cintegrity/adapters/: langchain.py  mcp_elicit.py  (+4 more)
cintegrity/tests/: test_mock_validation.py
cintegrity/tests/adapters/: test_mcp_elicit.py
cintegrity/tests/e2e/: test_full_pipeline.py
cintegrity/tests/gateway/: test_manager.py  test_search.py  test_search_tools.py
cintegrity/tests/pybox/: test_acceptance.py  test_data_flow_example.py  test_elicitation.py  test_imports.py  test_instrumented.py  test_protocols.py  test_provenance_export.py  test_raw.py  test_transparent.py
cintegrity/tests/versa/: test_mock_schema_consistency.py
(+70 files in other folders)
