[project]
name = "cintegrity"
version = "0.1.0"
description = "cintegrity: MCP Gateway for tool orchestration with skills and workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.14.2",
  "pyyaml>=6.0.0",
  "httpx>=0.27.0",
  "langchain>=1.2.3",
  "langchain-core>=1.2.6",
  "langchain-openai>=1.1.7",
  "langchain-anthropic>=1.3.1",
  "langchain-mcp-adapters>=0.2.1",
  "langgraph>=1.0.5",
  "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "anyio>=4.0.0",
  "hypothesis>=6.0.0",
]
langchain = [
  "langchain-mcp-adapters>=0.2.1",
  "langchain>=1.2.3",
]

[project.scripts]
cintegrity-mcp = "cintegrity.gateway.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cintegrity"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pyrefly]
python-version = "3.12"
project-includes = ["src/cintegrity"]
project-excludes = ["src/cintegrity/versa"]
search-path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pyrefly>=0.47.0",
    "ruff>=0.8.4",
]
